# kafka-rust

./: 2  Cargo.toml  README.md  example.txt  supported_versions.json  test.py
encode_derive/: Cargo.toml
encode_derive/src/: lib.rs
src/: lib.rs  main.rs  types.rs
src/kafka/: apiversions.rs  fetch.rs  listpartitions.rs  mod.rs
src/kafka/log/: mod.rs  partition_record.rs  topic_log.rs
src/types/: array.rs  bytes.rs  cstring.rs  integers.rs  kafkastring.rs  mod.rs  record.rs  uuid.rs  uvarint.rs  varint.rs
