[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Edgar Modesto"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
encode_derive = {path = "./encode_derive"}
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "2.0.12"                             # error handling
tokio = {version = "1.44.0", features = ["full"]}
serde_json = {version = "1.0.140"}
serde = {version = "1.0.219", features = ["derive"]}
uuid = "1.16.0"
